multithread in most crazy and un-OOP way, check later for refract

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">LiveDataAsyncTask</string>
+    <string name="app_name">AsyncProgressBarMultiThreadDemo</string>
     <string name="bnStart">Start</string>
 </resources>
